1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): 
	Remove local variables that are now instance variables (below).
	([SimpleProbeDisplay -drop]): Drop hideB and title here.
	Don't drop topLevel. Drop raisedFrame and top_top_Frame.
	Rename myTitle to title throughout.

	* SimpleProbeDisplay.h (SimpleProbeDisplay): Add top_top_Frame,
	raisedFrame, title, and hideB as instance variables.

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): 
	Call setWindowTitle:.

	* CompleteProbeDisplay.m ([CompleteProbeDisplay -drop]): Don't
	drop topFrame or topLevel here.

	* CommonProbeDisplay.m ([CommonProbeDisplay -drop]): New method.

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): 
	Create extra frames to contain widget, hide button and title.
	([MultiVarProbeDisplay -update]): New method.
	([MultiVarProbeDisplay -drop]): Drop the new widgets.

	* MultiVarProbeDisplay.h (MultiVarProbeDisplay): New ivars
	top_top_Fram,e middleFrame, raisedFrame, title, and hideB.

	* MultiVarProbeDisplay.[hm]: New methods package: getId:, and update.

	* simtoolsgui.h (CommonProbeDisplay): Remove setProbedObject: and
	getProbedObject from protocol (moved to SingleProbeDisplay).
	(SingleProbeDisplay): New protocol.
	(CompleteProbeDisplay, SimpleProbeDisplay): Adopt SingleProbeDisplay
	instead of CommonProbeDisplay.
	(MultiVarProbeDisplay): New protocol. 
	(MultiVarProbeWidget): Replace setProbeList: with setProbeMap:.
	Rename setLabelingFlag: to setFieldLabelingFlag:.
	Rename setAgentNameSelector: to setObjectNameSelector:.
	Add +createBegin:.
	Add MultiVarProbeDisplay class object.

	* VarProbeWidget.m ([VarProbeWidget -createEnd]): Use setVarProbe:
	instead of setProbeType:.

	* VarProbeWidget.[hm]: Remove static typing from setProbe:.
	Add windowName argument to idReceive:.

	* SimpleProbeDisplay.h: Include SingleProbeDisplay.h instead 
	of CommonProbeDisplay.h.