@@ -1,3 +1,8 @@
+1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ClassDisplayWidget.m ([ClassDisplayWidget -getTopLevel]): 
+	New method.
+
 1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): 
